--- a/TruthOrDareUI/TruthOrDareUI.Android/TruthOrDareUI.Android.csproj
+++ b/TruthOrDareUI/TruthOrDareUI.Android/TruthOrDareUI.Android.csproj
@@ -65,6 +65,7 @@
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.0.0.396" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlatButtonRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
