--- a/TruthOrDareUI/TruthOrDareUI.Android/Properties/AndroidManifest.xml
+++ b/TruthOrDareUI/TruthOrDareUI.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appname" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.reiniellematt.truthordare" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="TruthOrDareUI.Android" android:icon="@mipmap/ic_launcher"></application>
+	<application android:label="Truth or Dare" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
