--- a/TruthOrDareUI/TruthOrDareUI.Android/TruthOrDareUI.Android.csproj
+++ b/TruthOrDareUI/TruthOrDareUI.Android/TruthOrDareUI.Android.csproj
@@ -97,5 +97,8 @@
       <Name>TruthOrDareUI</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\Strings.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
