Challenge page added

--- a/TruthOrDareUI/TruthOrDareUI/TruthOrDareUI.csproj
+++ b/TruthOrDareUI/TruthOrDareUI/TruthOrDareUI.csproj
@@ -16,6 +16,9 @@
     <EmbeddedResource Update="Views\AddMembersPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ChallengePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\GamePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
